--- a/devops.html
+++ b/devops.html
@@ -42,7 +42,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698496273-director-platform-innovation-devops'>Biogen Director Platform Innovation & DevOps | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698496273-director-platform-innovation-devops'>Biogen Director Platform Innovation & DevOps | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -92,7 +92,7 @@
 <p><span class="badge badge-light">Paris, France  Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://openvpninc.recruitee.com/o/lead-devops-engineer-3'>
+<h5><a href='https://openvpninc.recruitee.com/o/lead-devops-engineer-3'>
       Lead DevOps Engineer - OpenVPN Inc.
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -122,7 +122,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://techflow.applytojob.com/apply/iael3W0CxB/DevOps-Engineer'>DevOps Engineer - TechFlow - Career Page</a></h5> 
+<h5><a href='https://techflow.applytojob.com/apply/iael3W0CxB/DevOps-Engineer'>DevOps Engineer - TechFlow - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 19, 2019 ... Apply to DevOps Engineer at TechFlow in Reston, VA.</p>
 <hr/>
@@ -136,7 +136,7 @@ agencies and the people they serve.</p>
 <p>Oct 22, 2019 ... Objective. Togo Group is seeking an IT Support & DevOps Engineer to help lead 
 internal IT operations. You will be completing tasks in support of our IT functions?...</p>
 <hr/>
-<h5><a href='https://srijantech.recruiterbox.com/jobs/fk03ilg/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://srijantech.recruiterbox.com/jobs/fk03ilg/'>
     DevOps - Engineering Manager at Srijan Technologies Pvt Ltd
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -166,11 +166,11 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999698462881-cloud-devops-engineer-aws-devops-engineer'>Version 1 Cloud DevOps Engineer / AWS DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Version1/743999698462881-cloud-devops-engineer-aws-devops-engineer'>Version 1 Cloud DevOps Engineer / AWS DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://tempo.recruiterbox.com/jobs/fk06zck'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://tempo.recruiterbox.com/jobs/fk06zck'>
     Lead DevOps Engineer at Tempo
 </a></h5> 
 <p><span class="badge badge-light">Reykjav?k, Iceland Montreal</span></p>
@@ -267,7 +267,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -279,7 +279,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Vancouver, BC  Vancouver</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698395981-fresher-devops-software-engineer'>KMS Technology FRESHER DEVOPS SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698395981-fresher-devops-software-engineer'>KMS Technology FRESHER DEVOPS SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -305,7 +305,7 @@ such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698373991-team-lead-infrastructure-operations-cicd-devops-'>Ubisoft Team Lead (Infrastructure/Operations/CICD/DevOps) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698373991-team-lead-infrastructure-operations-cicd-devops-'>Ubisoft Team Lead (Infrastructure/Operations/CICD/DevOps) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, QCCanada  Montreal Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -343,7 +343,7 @@ such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://shijigroup.join.com/jobs/447692-devops-engineer-remote'>Job @ Shiji (Katowice): DevOps Engineer - Remote | JOIN</a></h5> 
+<h5><a href='https://shijigroup.join.com/jobs/447692-devops-engineer-remote'>Job @ Shiji (Katowice): DevOps Engineer - Remote | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
