--- a/software.html
+++ b/software.html
@@ -39,8 +39,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oMIhbfwG&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=n2EgpMwC'>NICE inContact Careers - Sr. Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=obRn9fwi&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nNehpMwY'>Guidewire Software, Inc. Careers - Software Engineer - Cloud Native Software Developer -  San Mateo, CA</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior---staff---principal-1557543/?gh_src=2748acb81'>Software Engineer, Security (Senior / Staff / Principal) | Okta</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oMIhbfwG&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=n2EgpMwC'>NICE inContact Careers - Sr. Software Engineer</a></h5> 
+<p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, UT</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=ocK89fwX&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=ni3gpMwh'>Palo Alto Networks Careers - Intern - Software Engineer in Test, Performance</a></h5> 
@@ -55,7 +63,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=oVtsbfwL&__jvst=Employee&__jvsd=sjOYzhwq&__jvsc=Twitter&bid=nAKfpMwf'>New Relic Careers - Senior Software Engineer - Reliability Awareness</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=oVtsbfwL&__jvst=Employee&__jvsd=sjOYzhwq&__jvsc=Twitter&bid=nAKfpMwf'>New Relic Careers - Senior Software Engineer - Reliability Awareness</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  Portland, OR</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -71,7 +79,7 @@
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/7uc33o3m7e61mycw9jgt6cg9ie'>Senior Backend Software Engineer | CardinalHire</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/7uc33o3m7e61mycw9jgt6cg9ie'>Senior Backend Software Engineer | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -127,7 +135,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---canada-1848934/?gh_src=82a8057f1'>Software Engineer Intern - Canada | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---canada-1848934/?gh_src=82a8057f1'>Software Engineer Intern - Canada | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -171,11 +179,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior--staff--principal-1650474/?gh_src=82a8057f1'>Software Engineer, Security (Senior/ Staff/ Principal) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior--staff--principal-1650474/?gh_src=82a8057f1'>Software Engineer, Security (Senior/ Staff/ Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-technical-services-senior---staff-1875199/?gh_src=82a8057f1'>Software Engineer, Technical Services (Senior / Staff) | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-technical-services-senior---staff-1875199/?gh_src=82a8057f1'>Software Engineer, Technical Services (Senior / Staff) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -183,7 +191,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior---staff---principal-1557543/?gh_src=82a8057f1'>Software Engineer, Security (Senior / Staff / Principal) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior---staff---principal-1557543/?gh_src=82a8057f1'>Software Engineer, Security (Senior / Staff / Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -195,7 +203,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-analytics-infrastructure-staff-or-principal-1905469/?gh_src=82a8057f1'>Software Engineer, Analytics Infrastructure (Staff or Principal) | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-analytics-infrastructure-staff-or-principal-1905469/?gh_src=82a8057f1'>Software Engineer, Analytics Infrastructure (Staff or Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -203,11 +211,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-in-test-desktop-client-and-web-applications-senior-staff-1898711/?gh_src=82a8057f1'>Software Engineer in Test, Desktop Client and Web Applications (Senior/Staff) | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-in-test-desktop-client-and-web-applications-senior-staff-1898711/?gh_src=82a8057f1'>Software Engineer in Test, Desktop Client and Web Applications (Senior/Staff) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nextroll/jobs/4501202002'>Job Application for Senior Software Engineer, Full Stack - RollWorks at NextRoll</a></h5> 
+<h5><a href='https://boards.greenhouse.io/nextroll/jobs/4501202002'>Job Application for Senior Software Engineer, Full Stack - RollWorks at NextRoll</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -243,7 +251,7 @@
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/americanwell/jobs/4500028002'>Job Application for Software Engineer, Devices at American Well</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/americanwell/jobs/4500028002'>Job Application for Software Engineer, Devices at American Well</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -299,7 +307,7 @@
 <p><span class="badge badge-light">Krakow, Poland  Krakow, Poland  Krakow, Poland</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ox1mafwO&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=ntI0oMwQ'>ServiceNow Careers - Software Architect (Distinguished Software Engineer) ? UI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ox1mafwO&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=ntI0oMwQ'>ServiceNow Careers - Software Architect (Distinguished Software Engineer) ? UI</a></h5> 
 <p><span class="badge badge-light">San Diego, California  San Diego</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -307,7 +315,7 @@
 <p><span class="badge badge-light">Tampa, FL Tampa, FL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698521909-internship-software-engineer-sf'>Optimizely Internship - Software Engineer - SF | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698521909-internship-software-engineer-sf'>Optimizely Internship - Software Engineer - SF | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -315,7 +323,7 @@
 <p><span class="badge badge-light">Austin Austin  Austin, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698523778-software-engineer-data-infrastructure'>Bosch Group Software Engineer, Data Infrastructure | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698523778-software-engineer-data-infrastructure'>Bosch Group Software Engineer, Data Infrastructure | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -375,7 +383,7 @@
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698518258-senior-software-engineer-continuous-integration-infrastructure'>Square Senior Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698518258-senior-software-engineer-continuous-integration-infrastructure'>Square Senior Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -429,14 +437,6 @@
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=o6dhbfwv&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=ntrLoMwk'>NICE Careers - Expert Java Software Engineer</a></h5> 
 <p><span class="badge badge-light">Raanana, Israel</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=oQtkbfwy&__jvst=Tenable+Employee&__jvsd=szNYEhwK&__jvsc=Twitter&bid=nIxJoMwD'>Tenable Careers - Senior Software Engineer - UI</a></h5> 
-<p><span class="badge badge-light">San Jose, California</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://www.greatinsurancejobs.com/job/6409324/software-developer/?TrackID=97736'>Software Developer job with Travelers Insurance | 6409324</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 
